# catbus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  K8S.md  README.md  docker-compose.yml
.github/workflows/: docker.yml
client/: .gitignore  package-lock.json  package.json  tsconfig.json
client-js/src/: client.ts  index.ts  react.ts  types.ts
client-node/: README.md
client-rs/: Cargo.toml  README.md
client-rs/src/: client.rs  config.rs  error.rs  lib.rs  messages.rs
client-rs/tests/: integration.rs
client/src/: client.ts
src/: lib.rs  main.rs
src/auth/: grants.rs  mod.rs  tokens.rs
src/channels/: mod.rs
src/cli/: commands.rs  mod.rs
src/server/: connections.rs  mod.rs  router.rs  transport.rs  websocket.rs
src/storage/: mod.rs  postgres.rs  ringbuf.rs
tests/: integration.rs  resilience.rs  stress.rs
