[package]
name = "catbus-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for Catbus WebTransport message bus"
license = "MIT"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["sync", "time", "macros", "rt"] }

# WebTransport / QUIC
wtransport = { version = "0.6", features = ["dangerous-configuration"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
